# healthviewos

./: .gitignore  DATA.md  MODEL.md  PRIVACY.md  README.md  SOURCES.md  package.json  pnpm-lock.yaml
api/: xai-realtime-token.js
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  desktop.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/api/: agent-chat.js  agent-provider-fetch.js  generated-prompts.js  nppes-search.js  places-search.js  xai-realtime-token.d.ts
apps/web/public/: site.webmanifest
apps/web/src/: App.tsx  agent.ts  browser-shims.ts  health-context.ts  index.css  main.tsx  voice.ts
apps/web/src/embed/: host.ts  (+1 more)
assets/metadata/: atlas-concepts.json  atlas-hierarchy.json  atlas-manifest.json  lower-limb-donor-map.json  skeletal-map.json  system-object-filters.json  upper-limb-donor-map.json  z-labels.json
prompts/: README.md  healthview-agent.md  server-agent.md  voice-session.md
prompts/tools/: control-atlas-view.md  create-record.md  end-voice-chat.md  get-app-context.md  get-health-context.md  get-record.md  navigate.md  open-page.md  run-ui-action.md  search-app.md  search-atlas-targets.md  search-records.md  search-services.md  select-service-result.md  set-chat-open.md  update-record.md
scripts/: sync-openhuman-atlas-assets.mjs
(+71 files in other folders)
