[package]
name = "healthviewos-desktop"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.3"
open = "5.3.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=2.11.2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSResponder", "NSWindow"] }

[features]
default = []
